<resources>
    <string name="app_name" translatable="false">Business Logo and Card\nMaker</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="app_version_name" translatable="false">1.0</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="bnr_admob" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_admob" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="int_admob" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_open_admob" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="video_admob" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="privacyPolicy" translatable="false">https://www.termsfeed.com/live/7e42c920-4f36-425e-a80a-c616a5a77156</string>
    <string name="dev_name" translatable="false">Account+Name</string>
    <string name="home" translatable="false">Home</string>
    <string name="create" translatable="false">Create</string>
    <string name="logo" translatable="false">Art</string>
    <string name="more1" translatable="false">More</string>
    <string name="remove_ads" translatable="false">Remove Ads</string>
    <string name="rate_us_on_google" translatable="false">Rate us on Google</string>
    <string name="about_us" translatable="false">About us</string>
    <string name="exit_text" translatable="false">Exit</string>
    <string name="label_ok" translatable="false">OK</string>
    <string name="by_kliiv_labs" translatable="false">by hasaniasoft</string>
    <string name="easy" translatable="false">Easy</string>
    <string name="card_maker" translatable="false">Tool Kit</string>
    <string name="image" translatable="false">Image</string>
    <string name="select_design" translatable="false">SELECT DESIGN</string>
    <string name="logo_design" translatable="false">Logo Design</string>
    <string name="poster_design" translatable="false">Poster Design</string>
    <string name="card_design" translatable="false">Card Design</string>
    <string name="request_for_design" translatable="false">Buy me a coffee</string>
    <string name="open_drawer" translatable="false">Open Drawer</string>
    <string name="close_drawer" translatable="false">Close Drawer</string>
    <string name="typeFont" translatable="false">Type Font</string>
    <string name="addText" translatable="false">Add Text</string>
    <string name="poster" translatable="false">Poster</string>
    <string name="card" translatable="false">Card</string>
    <string name="bg_shape" translatable="false">BG Shape</string>
    <string name="scale" translatable="false">Scale</string>
    <string name="DesignOptionsInstruction" translatable="false">Long Press on your Design for Options.</string>
    <string name="NoDesigns" translatable="false">"No Design's saved. Check out Create Logo (From Scratch or With Designer) and save as Design."</string>
    <string name="SavedAs" translatable="false">Save As</string>
    <string name="SavedPictures" translatable="false">Saved Pictures</string>
    <string name="add_sticker" translatable="false">Art</string>
    <string name="add_text" translatable="false">Text</string>
    <string name="alert" translatable="false">Unsaved work</string>
    <string name="app_not_found" translatable="false">Application not found!!!</string>
    <string name="bestSize" translatable="false">Find best size phone can handle</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="badge" translatable="false">Badge</string>
    <string name="bakery" translatable="false">Bakery</string>
    <string name="ribbon" translatable="false">Ribbon</string>
    <string name="icon" translatable="false">Icon</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="beautyy" translatable="false">Beauty</string>
    <string name="bistroo" translatable="false">Bistro</string>
    <string name="profession" translatable="false">Profession</string>
    <string name="peopl" translatable="false">People</string>
    <string name="christianity" translatable="false">Christianity</string>
    <string name="pets" translatable="false">Pets</string>
    <string name="letters" translatable="false">Letters</string>
    <string name="babymom" translatable="false">BabyMom</string>
    <string name="fashion" translatable="false">Fashion</string>
    <string name="business" translatable="false">Business</string>
    <string name="threeD" translatable="false">ThreeD</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="square" translatable="false">Square</string>
    <string name="butterfly" translatable="false">Butterfly</string>
    <string name="cars" translatable="false">Cars</string>
    <string name="music" translatable="false">Music</string>
    <string name="party" translatable="false">Party</string>
    <string name="ngo" translatable="false">NGO</string>
    <string name="festival" translatable="false">Festival</string>
    <string name="tattoo" translatable="false">Tattoo Studio</string>
    <string name="flower" translatable="false">Flower</string>
    <string name="star" translatable="false">Star</string>
    <string name="video" translatable="false">Video</string>
    <string name="heart" translatable="false">Heart</string>
    <string name="halloween" translatable="false">Halloween</string>
    <string name="holiday" translatable="false">Holiday</string>
    <string name="toys" translatable="false">Toys</string>
    <string name="animals_birds" translatable="false">Animals &amp; Birds</string>
    <string name="text" translatable="false">Text</string>
    <string name="shapes" translatable="false">Shapes</string>
    <string name="social" translatable="false">Social</string>
    <string name="leaf" translatable="false">Leaf</string>
    <string name="corporate" translatable="false">Corporate</string>
    <string name="property" translatable="false">Property</string>
    <string name="sports" translatable="false">Sports</string>
    <string name="restaurant_cafe" translatable="false">Restaurant &amp; cafe</string>
    <string name="circle" translatable="false">Circle</string>
    <string name="check_internet" translatable="false">Oops! something went wrong. Please check your internet connection and try again.</string>
    <string name="check_memory" translatable="false">Oops! Please check your device storage and clear some data and try again.</string>
    <string name="choose_font" translatable="false">Choose Font Category</string>
    <string name="choose_stickr" translatable="false">Choose Sticker</string>
    <string name="colorPicker" translatable="false">Color Picker</string>
    <string name="colorcc" translatable="false">Selected Color</string>
    <string name="create1" translatable="false">Create Logo</string>
    <string name="create2" translatable="false">Create Logo With DESIGNER</string>
    <string name="create_dir_err" translatable="false">"Can't create directory to save image."</string>
    <string name="crop" translatable="false">Crop</string>
    <string name="custom" translatable="false">Custom</string>
    <string name="del_error_toast" translatable="false">Error occurred during deletion.</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="deleted" translatable="false">Deleted</string>
    <string name="des_save_image" translatable="false">Oops! Seems like your device is unable to handle the size. Try smaller Sizes.</string>
    <string name="designer_msg" translatable="false">Error while getting Designer Logos.</string>
    <string name="designer_title" translatable="false">Incomplete Info</string>
    <string name="dont_show" translatable="false">"Don't show again"</string>
    <string name="downloadin_file" translatable="false">Downloading file...</string>
    <string name="email_error" translatable="false">No email client installed.</string>
    <string name="email_msg" translatable="false">Write your problems or suggestions here..</string>
    <string name="error" translatable="false">Error while retrieving the picture. Please try again.</string>
    <string name="error1" translatable="false">Error</string>
    <string name="exit_title" translatable="false">Exit Alert!</string>
    <string name="exit_warning" translatable="false">Are you sure you want to exit?</string>
    <string name="file_not_downloaded" translatable="false">Unable to download file. Please check your internet connection and try again.</string>
    <string name="fontCata1" translatable="false">Calligraphy</string>
    <string name="fontCata2" translatable="false">Contemporary</string>
    <string name="fontCata3" translatable="false">Funky</string>
    <string name="fontCata4" translatable="false">Modern</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="go_premium" translatable="false">Purchase</string>
    <string name="helpTag" translatable="false">"Don't worry, we are here to help you."</string>
    <string name="helpTag1" translatable="false">Or maybe, ask for a new feature.</string>
    <string name="helpTag2" translatable="false">Please give 5 stars in Play Store.</string>
    <string name="helpTitle" translatable="false">Need Further Help?</string>
    <string name="helpTitle1" translatable="false">Give Suggestion</string>
    <string name="helpTitle2" translatable="false">Thank you!</string>
    <string name="helpTitleC" translatable="false">Need Help?</string>
    <string name="inappHeader" translatable="false">App Rater</string>
    <string name="inapp_btn1" translatable="false">Rate us Now !!!!</string>
    <string name="inapp_btn2" translatable="false">Buy all</string>
    <string name="inapp_designer_text" translatable="false">"Designer Logo's"</string>
    <string name="inapp_msg" translatable="false">"More than 3.5 Million Logo's created with Logo Maker"</string>
    <string name="inapp_rs1" translatable="false">Click here to rate US</string>
    <string name="inapp_tittle" translatable="false">Go Premium</string>
    <string name="later" translatable="false">Later</string>
    <string name="leavepage_alert" translatable="false">Are you sure you want to leave this page?</string>
    <string name="more" translatable="false">More(Ad)</string>
    <string name="msg_rating" translatable="false">Dear User, Your 5 stars rating and review will encourage us to better improve the product.</string>
    <string name="my_design" translatable="false">My Designs</string>
    <string name="no" translatable="false">No</string>
    <string name="no1" translatable="false">No thanks!</string>
    <string name="no_internet" translatable="false">No Internet</string>
    <string name="no_layers" translatable="false">No Layers !!</string>
    <string name="no_more_data" translatable="false">No more data on Server!</string>
    <string name="no_saved_pics" translatable="false">No saved pictures</string>
    <string name="open" translatable="false">Open</string>
    <string name="rate_us" translatable="false">Rate us</string>
    <string name="share" translatable="false">Share</string>
    <string name="template_error" translatable="false">Some images are missing for this designs. Do you want to continue?</string>
    <string name="txt_conti" translatable="false">Continue</string>
    <string name="txt_design" translatable="false">Design</string>
    <string name="txt_image" translatable="false">Image</string>
    <string name="txt_saveMsg" translatable="false"><b>Design</b>" - Lets you rework "</string>
    <string name="txt_saveMsg1" translatable="false"><b>Image</b> - Is final Picture for sharing and posting.</string>
    <string name="yes" translatable="false">Yes</string>
</resources>