<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:background="@drawable/card_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white1">

        <TextView
            android:id="@+id/txtapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5.0dip"
            android:text="@string/SavedAs"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/txt_rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ss"
        android:layout_margin="10.0dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saveMsg"
                android:textColor="@color/black"
                android:textSize="17.0dip" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:text="@string/txt_saveMsg1"
                android:textColor="@color/black"
                android:textSize="17.0dip" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_rel"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_template"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:padding="5.0dip"
            android:text="@string/txt_design"
            android:textColor="@color/black"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/btn_image"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:padding="5.0dip"
            android:text="@string/txt_image"
            android:textColor="@color/black"
            android:textSize="18.0sp" />
    </LinearLayout>
</RelativeLayout>