<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/Theme.LogoMaker.NoActionBar"
    tools:context=".main.SplashScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/business"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/card_maker"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="TODO"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/playstore" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/by_kliiv_labs"
        android:textColor="#787878" />

</FrameLayout>