<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_bg"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white1">

        <TextView
            android:id="@+id/txtapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5.0dip"
            android:text="@string/error1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/kk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_error"
            android:textColor="@color/black"
            android:textSize="17.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:padding="5.0dip"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/btn_conti"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:padding="5.0dip"
            android:text="@string/txt_conti"
            android:textColor="@color/black"
            android:textSize="18.0sp" />
    </LinearLayout>
</LinearLayout>