<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_bg"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white1">

        <TextView
            android:id="@+id/txtapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5.0dip"
            android:text="@string/alert"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/leavepage_alert"
            android:textColor="@color/black"
            android:textSize="17.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:backgroundTint="@color/white"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="16.0sp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:backgroundTint="@color/white"
            android:padding="5.0dip"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="16.0sp" />
    </LinearLayout>
</LinearLayout>