<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10.0dip">

    <TextView
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40.0dip"
        android:paddingRight="40.0dip"
        android:text="@string/open"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18.0sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="10.0dip"
        android:background="?attr/colorPrimaryVariant" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:paddingLeft="40.0dip"
        android:paddingRight="40.0dip"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18.0sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="10.0dip"
        android:background="?attr/colorPrimaryVariant" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:paddingLeft="40.0dip"
        android:paddingRight="40.0dip"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18.0sp" />
</LinearLayout>